# equidna

./: pyproject.toml  requirements-dev.txt
.github/workflows/: ci-test.yml
equidna/: dataframe.py  selectors.py
equidna/tests/: add_test.py  columns_test.py  conftest.py  double_test.py  drop_nulls_test.py  filter_test.py  gather_every_test.py  generic_test.py  head_test.py  join_test.py  pipe_test.py  select_test.py  to_arrow_test.py  unique_test.py  unpivot_test.py  util.py  with_column_sequence_test.py  with_columns_test.py
equidna/tests/frame/: add_test.py  double_test.py  drop_nulls_test.py  drop_test.py  filter_test.py  gather_every_test.py  generic_test.py  head_test.py  join_test.py  lit_test.py  pipe_test.py  rename_test.py  sample_test.py  select_test.py  sort_test.py  to_dict_test.py  unique_test.py  unpivot_test.py  with_column_sequence_test.py  with_columns_test.py  write_csv_test.py
